Fixed support for preceeding or tailing whitespace in search terms

--- a/src/imat/resources/helptext/helpStyle.css
+++ b/src/imat/resources/helptext/helpStyle.css
@@ -28,11 +28,13 @@ a:hover{
 }
 
 h3 {
+    font-family: "Raleway Black",SansSerif;
     font-size: 18pt;
     font-weight: bold;
 }
 
 h1 {
+    font-family: "Raleway Black",SansSerif;
     font-size: 22pt;
 }
 
